// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon \`component\` prop can access to svg defs if has children 1`] = `
<i
  class="m-icon my-home-icon"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    height="1em"
    width="1em"
  >
    <defs>
      <linearGradient
        id="gradient"
      >
        <stop
          offset="20%"
          stop-color="#39F"
        />
        <stop
          offset="90%"
          stop-color="#F3F"
        />
      </linearGradient>
    </defs>
    <title>
      Cool Home
    </title>
    <path
      d="'M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z'"
      fill="scriptUrl(#gradient)"
    />
  </svg>
</i>
`;

exports[`Icon should give warning and render <i>{null}</i> 1`] = `
<i
  class="m-icon"
/>
`;

exports[`Icon should render to a <i class="xxx"><svg>...</svg></i> 1`] = `
<i
  class="m-icon m-icon-message my-icon-classname"
>
  <svg
    aria-hidden="true"
    class=""
    data-icon="message"
    fill="currentColor"
    height="1em"
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M292.021 424.959c-30.397 0-54.994 24.597-54.994 54.994s24.697 54.995 54.994 54.995c30.397 0 54.995-24.598 54.995-54.995s-24.598-54.994-54.995-54.994zm439.957 0c-30.397 0-54.994 24.597-54.994 54.994s24.697 54.995 54.994 54.995 54.895-24.598 54.995-54.995c0-30.397-24.698-54.994-54.995-54.994zm-219.978 0c-30.397 0-54.995 24.597-54.995 54.994s24.698 54.995 54.995 54.995 54.994-24.598 54.994-54.995S542.297 424.96 512 424.96z"
    />
    <path
      d="M983.354 291.871c-25.898-57.094-62.994-108.389-110.29-152.385-46.995-43.795-101.69-78.192-162.584-102.19C647.586 12.6 580.793 0 512 0c-68.794 0-135.587 12.599-198.48 37.296-60.895 23.998-115.59 58.395-162.585 102.19-47.195 43.996-84.292 95.191-110.29 152.385C13.749 351.266.05 414.36.05 479.353c0 116.889 45.095 228.678 127.187 316.27l23.098 196.58c1.4 11.999 8.7 22.498 19.498 27.897a35.79 35.79 0 0 0 16.199 3.9c6.099 0 12.298-1.6 17.798-4.7l148.285-84.291c51.395 15.798 105.09 23.797 159.785 23.797 68.793 0 135.587-12.598 198.48-37.296 60.894-23.998 115.59-58.394 162.584-102.19 47.196-43.996 84.292-95.19 110.29-152.385 26.997-59.394 40.596-122.388 40.596-187.482.1-65.093-13.599-128.187-40.496-187.582zM917.76 637.038c-21.998 48.395-53.495 91.99-93.79 129.487-40.397 37.596-87.492 67.194-139.987 87.892-54.495 21.497-112.39 32.296-172.083 32.296-52.295 0-103.59-8.399-152.185-24.997-9.8-3.3-20.498-2.3-29.398 2.8L215.43 929.809 197.23 775.124c-.9-7.999-4.5-15.398-10.099-21.098C112.94 678.834 72.043 581.243 72.043 479.353c0-54.694 11.499-107.69 34.196-157.684 21.998-48.396 53.495-91.991 93.791-129.488 40.396-37.596 87.492-67.193 139.987-87.891C394.41 82.892 452.306 71.993 512 71.993s117.588 10.899 172.083 32.297c52.495 20.698 99.59 50.195 139.986 87.891 40.196 37.497 71.793 80.992 93.791 129.488 22.698 49.995 34.197 102.99 34.197 157.684-.1 54.695-11.6 107.69-34.297 157.685z"
    />
  </svg>
</i>
`;

exports[`Icon should support pass svg paths as children 1`] = `
<i
  class="m-icon"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
    />
  </svg>
</i>
`;

exports[`Icon should support svg react component 1`] = `
<i
  class="m-icon my-home-icon"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
    />
  </svg>
</i>
`;

exports[`Icon should support two-tone icon 1`] = `
<i
  class="m-icon m-icon-check-circle"
>
  <svg
    aria-hidden="true"
    class=""
    data-icon="check-circle"
    fill="currentColor"
    height="1em"
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm260.3 356.4L412.8 717.1l-.4.4c-2.4 2.6-5.3 4.9-8.5 6.7-5.6 3.2-11.8 4.7-17.8 4.7-12.5 0-24.7-6.5-31.3-18.2L245.9 520.3C236 503 242 481 259.3 471.2c17.3-9.9 39.3-3.9 49.1 13.4l85.4 149.5 327.5-328.5c14-14.1 36.8-14.1 50.9-.1 14.1 14.1 14.1 36.9.1 50.9z"
    />
  </svg>
</i>
`;

exports[`Icon.createFromIconfontCN() should support iconfont.cn 1`] = `
<div
  class="icons-list"
>
  <i
    class="m-icon m-icon-icon-tuichu"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-tuichu"
      />
    </svg>
  </i>
  <i
    class="m-icon m-icon-icon-facebook"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-facebook"
      />
    </svg>
  </i>
  <i
    class="m-icon m-icon-icon-twitter"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-twitter"
      />
    </svg>
  </i>
</div>
`;
